feat: S01 - Create Header component with navigation

--- a/apps/marketing/src/pages/index.astro
+++ b/apps/marketing/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import PageLayout from "../layouts/PageLayout.astro";
 ---
 
-<BaseLayout title="Echo - Coming Soon">
-  <main class="min-h-screen flex flex-col items-center justify-center px-4">
+<PageLayout title="Echo - Coming Soon">
+  <main class="min-h-[calc(100vh-4rem)] flex flex-col items-center justify-center px-4">
     <div class="text-center max-w-md">
       <div class="mb-8">
         <svg
@@ -41,4 +41,4 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </a>
     </div>
   </main>
-</BaseLayout>
+</PageLayout>
