--- a/apps/marketing/src/pages/pricing.astro
+++ b/apps/marketing/src/pages/pricing.astro
@@ -21,7 +21,7 @@ import FAQ from "../components/FAQ.tsx";
   </section>
 
   <!-- Pricing Table -->
-  <PricingTable />
+  <PricingTable hideHeading />
 
   <!-- Feature Comparison Table -->
   <section class="py-16 lg:py-24">
